# libsmackerdec

./: CMakeLists.txt  README  smackerdec.pc.cmakein  smackerdec.pc.in  smackerdecConfig.cmake.in
include/: BitReader.h  FileStream.h  HuffmanVLC.h  LogError.h  SmackerDecoder.h
lib/: libsmackerdec.lib
src/: BitReader.cpp  FileStream.cpp  HuffmanVLC.cpp  LogError.cpp  SmackerDecoder.cpp
win32/: smackerdec.def
win32/VS2010/: smackerdec_dynamic.sln  smackerdec_dynamic.vcxproj
win32/VS2022/: smackerdec_dynamic.sln  smackerdec_dynamic.vcxproj  smackerdec_dynamic.vcxproj.filters
